<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:id="@+id/root_element"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Logo"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_marginTop="250sp"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="34sp" />

    <Button
        android:id="@+id/Login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:layout_below="@id/Logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/LogIn"
    />
    <Button
        android:id="@+id/Reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:layout_below="@id/Login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/register"
        />
</RelativeLayout>